feat(tournament): improve management dialogs
